# referral_system_api

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 24a2d1939e90_.py  710522d2bd72_.py
src/: main.py
src/api/: dependencies.py
src/api/v1/endpoints/: auth.py  user.py
src/core/: config.py
src/database/: db.py
src/database/models/: user.py
src/repositories/: user.py
src/schemas/: errors.py  user.py
src/services/: user.py
src/static/: 200_response.html  404_response.html  500_response.html
src/utils/: auth.py
tests/: test_api_endpoints.py
